--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -61,21 +61,35 @@ Now, anyone coming from a systems programming background may have just had a vis
 
 What gives `NSError` its particular charm is everyone's favorite grab bag property: `userInfo`. As a convention throughout Cocoa, `userInfo` is a dictionary that contains arbitrary key-value pairs that, whether for reasons of subclassing or schematic sparsity, are not suited to full-fledged properties in and of themselves. In the case of `NSError`, there are several special keys that correspond to `readonly` properties.
 
-是什么给了 `NSError` 它独特的魅力？正是这个每个人都喜欢的大杂烩属性：`userInfo`。作为整个 Cocoa 的惯例，`userInfo` 是一个可以包含任意键值对的字典，无论是
+是什么给了 `NSError` 它独特的魅力？正是这个每个人都喜欢的大杂烩属性：`userInfo`。作为整个 Cocoa 的惯例，`userInfo` 是一个可以包含任意键值对的字典，无论是~~子类化还是稀疏的示意，都不合适加上或去掉所有的属性~~（Help，不会翻了）。在 `NSError` 这个例子中，有一些特定的键值对应着只读属性。
 
 Three are generally useful:
+
+这三个通常很有用：
 
 - `localizedDescription` (`NSLocalizedDescriptionKey`): A localized description of the error.
 - `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): A localized recovery suggestion for the error.
 - `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): A localized explanation of the reason for the error.
 
+- `localizedDescription` (`NSLocalizedDescriptionKey`): 一段本地化的错误描述。
+- `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): 一段该错误的恢复建议。
+- `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): 一段地本化的错误解释。
+
 ...whereas three others are specific to OS X:
+
+而另外三个只用在 OS X：
 
 - `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): An array containing the localized titles of buttons appropriate for displaying in an alert panel
 - `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
 - `helpAnchor` (`NSHelpAnchorErrorKey`): Used by an alert panel by a help anchor button.
 
+- `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): 一个包含了本地化的按钮标题的数组，用于展示在警告框中。
+- `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
+- `helpAnchor` (`NSHelpAnchorErrorKey`): 用于警告框中的帮助按钮。
+
 Here's how to construct `NSError` with a `userInfo` dictionary:
+
+以下是如何用 `userInfo` 字典来构造一个 `NSError`:
 
 ~~~{objective-c}
 NSDictionary *userInfo = @{
@@ -90,7 +104,11 @@ NSError *error = [NSError errorWithDomain:NSHipsterErrorDomain
 
 The advantage of encapsulating this information in an object like `NSError`, as opposed to, say, throwing exceptions willy-nilly, is that these error objects can be easily passed between different objects and contexts.
 
+相比于无可奈何地抛出异常，将这些信息包装在一个类似于 `NSError` 这样的对象中的优势在于，这些错误对象可以很容易的在不同对象及上下文中传递。
+
 For example, a controller that calls a method that populates an `NSError **` (as discussed in the next section) might pass that error into an alert view:
+
+举个例子，一个 controller 调用一个参数为 `NSError **` 的方法（下一节将会讨论）可以将那个错误传到警告框中：
 
 ~~~{objective-c}
 [[[UIAlertView alloc] initWithTitle:error.localizedDescription
@@ -102,7 +120,11 @@ For example, a controller that calls a method that populates an `NSError **` (as
 
 > As a brief non-sequitur: one clever hack used by C functions to communicate errors is to [encode 4-letter ASCII sequences in the 32 bit return type](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). It's no `localizedDescription`, but it's better than cross-referencing error codes from a table every time!
 
+> 作为一个合乎逻辑的推断（？）：一个在 C 函数中使用的交流错误的聪明办法是将[四个字母的 ASCII 码序列编码为 32 比特的返回类型 ](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). 它不是 `本地化的描述`，但至少比每次去找一个交叉引用的错误码表要好！
+
 For sake of completeness: here is a list of the standard `NSError` `userInfo` keys:
+
+为了完整性：以下是标准 `NSError` 的 `userInfo` 的键列表：
 
 - `NSLocalizedDescriptionKey`
 - `NSLocalizedFailureReasonErrorKey`
@@ -116,11 +138,19 @@ For sake of completeness: here is a list of the standard `NSError` `userInfo` ke
 
 ## Using `NSError`
 
+## 使用 `NSError`
+
 There are two ways in which you will encounter `NSError`: as a consumer and as a producer.
+
+你会在两种情况下遇到 `NSError`：作为消费者，或者作为生产者。
 
 ### Consuming
 
+### 消费
+
 As a consumer, you are primarily concerned with methods that have a final parameter of type `NSError **`. Again, this is to get around the single return value constraint of Objective-C; by passing a pointer to an uninitialized `NSError *` variable, that variable will be populated with any error the method encounters:
+
+为作消费者，你主要关心的是那些最后一个参数类型是 `NSError **` 的方法。同样，这是一种规避 Objective-C 单一返回值的手段；通过传递一个指向未初始化的 `NSError *` 变量的指针，那个变量将会被填入方法调用过程中遇到的错误：
 
 ~~~{objective-c}
 NSError *error = nil;
@@ -134,7 +164,11 @@ if (!success) {
 
 > According to Cocoa conventions, methods returning `BOOL` to indicate success or failure are encouraged to have a final `NSError **` parameter if there are multiple failure conditions to distinguish between. A good guideline is whether you could imagine that `NSError` bubbling up, and being presented to the user.
 
+> 根据 Cocoa 的惯例，鼓励那些返回 `BOOL` 来表示成功或失败的方法使用 `NSError **` 作为它的最后一个参数，如果有需要作区分的多种可能的失败条件的话。一个好的办法是，你是否能想像那个 `NSError` 将不断向上冒泡，最终呈现给用户。
+
 Another way `NSError` objects are passed is the inclusion of an `NSError *` argument in `completionHandler` blocks. This gets around both a constraint on single value returns as well as one on that value being returned synchronously. This has become especially popular with newer Foundation APIs, like `NSURLSession`:
+
+另一种传递 `NSError` 的方式是把它做为 `completionHandler` 回调的一个参数。这样即可以规避单一返回值的弊端，也可以避免值被同步返回。这种方式在新的 Foundation API 中特别流行，比如 `NSURLSession`：
 
 ~~~{objective-c}
 NSURL *URL = [NSURL URLWithString:@"http://example.com"];
@@ -152,9 +186,15 @@ NSURLSession *session = [NSURLSession sessionWithConfiguration:[NSURLSessionConf
 
 ### Producing
 
+### 生产
+
 One would be well-advised to follow the same conventions for error handling as other Foundation classes. In situations where a custom method invokes a method with an `NSError **` parameter, it is usually a good idea to similarly pass that `NSError **` parameter into the signature of the custom method. More substantial apps or libraries are encouraged to define their own error domains and error code constants as suitable.
 
+一般非常建议开发者按照其它 Foundation 类库的惯例来处理错误。在一个自定义的方法中调用了另一个带有 `NSError **` 形参的方法的情形下，it is usually a good idea to similarly pass that `NSError **` parameter into the signature of the custom method。鼓励 app 或第三方库适当地定义自己的错误域及错误代码常量。
+
 To pass an error to an `NSError **` parameter, do the following:
+
+传递一个错误到 `NSError **` 参数，做以下事情：
 
 ~~~{objective-c}
 - (BOOL)validateObject:(id)object
@@ -176,11 +216,19 @@ To pass an error to an `NSError **` parameter, do the following:
 
 ## `NSURLErrorDomain` & `CFNetworkErrors`
 
+## `NSURLErrorDomain` 和 `CFNetworkErrors`
+
 The greatest source of failure in iOS apps is networking. Between radios, transport, data roaming policies, proxies, security, authentication, and any number of protocol-specific negotiation, there is a lot that can go wrong.
+
+iOS 应用中最大的失败来源是网络。在无线信号，信号传输，数据漫游，代理，安全性，认证以及各种协议协商中，每个过程都可能出错。
 
 On the plus side, the Foundation URL Loading system is incredibly mature, and takes care of most of that for you. The only negative is that the documentation for all of the various things that can go wrong is scattered across different programming guides and headers. If you get a request failing with error `-1004`, it can be _surprisingly_ difficult to figure out exactly what that means.
 
+好的一面是，Foundation 中的 URL Loading 系统相当成熟，它接管了大部分事情。唯一不足的是不同的出错信息的文档分散在不同的编程指南和头文件中。如果你收到一个 `-1004` 的失败信息，你很难找出它是什么意思。
+
 As such, here is an exhaustive, well-formatted table at your disposal:
+
+正因如此，这里有一份详尽的、格式化的表格供你查阅：
 
 | Code | Description |
 |------|-------------|
@@ -190,7 +238,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | 100<br>`kCFSOCKSErrorUnknownClientVersion` | <q>The SOCKS server rejected access because it does not support connections with the requested SOCKS version.Query kCFSOCKSStatusCodeKey to recover the status code returned by the server.</q> |
 | 101<br>`kCFSOCKSErrorUnsupportedServerVersion` | <q>The version of SOCKS requested by the server is not supported. Query kCFSOCKSStatusCodeKey to recover the status code returned by the server.<br><br>Query the kCFSOCKSVersionKey to find the version requested by the server.</q> |
 
-### SOCKS4 Errors
+### SOCKS4 错误
 
 | Code | Description |
 |------|-------------|
@@ -199,7 +247,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | 112<br>`kCFSOCKS4ErrorIdConflict` | <q>Request rejected because the client program and identd report different user-ids.</q> |
 | 113<br>`kCFSOCKS4ErrorUnknownStatusCode` | <q>The status code returned by the server is unknown.</q> |
 
-### SOCKS5 Errors
+### SOCKS5 错误
 
 | Code | Description |
 |------|-------------|
@@ -209,13 +257,13 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | 123<br>`kCFSOCKS5ErrorUnsupportedNegotiationMethod` | <q>The requested method is not supported. Query kCFSOCKSNegotiationMethodKey to find the method requested.</q> |
 | 124<br>`kCFSOCKS5ErrorNoAcceptableMethod` | <q>The client and server could not find a mutually agreeable authentication method.</q> |
 
-### FTP Errors
+### FTP 错误
 
 | Code | Description |
 |------|-------------|
 | 200<br>`kCFFTPErrorUnexpectedStatusCode` | <q>The server returned an unexpected status code. Query the kCFFTPStatusCodeKey to get the status code returned by the server</q> |
 
-### HTTP Errors
+### HTTP 错误
 
 | Code | Description |
 |------|-------------|
@@ -232,7 +280,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | 310<br>`kCFErrorHTTPSProxyConnectionFailure` | <q>A connection could not be established to the HTTPS proxy.</q> |
 | 311<br>`kCFStreamErrorHTTPSProxyFailureUnexpectedResponseToCONNECTMethod` | <q>The HTTPS proxy returned an unexpected status code, such as a 3xx redirect.</q> |
 
-### CFURLConnection & CFURLProtocol Errors
+### CFURLConnection 及 CFURLProtocol 错误
 
 | Code | Description |
 |------|-------------|
@@ -261,7 +309,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | -1020<br>`kCFURLErrorDataNotAllowed` | <q>The connection failed because data use is currently not allowed on the device.</q> |
 | -1021<br>`kCFURLErrorRequestBodyStreamExhausted` | <q>The connection failed because its request’s body stream was exhausted.</q> |
 
-### File Errors
+### 文件错误
 
 | Code | Description |
 |------|-------------|
@@ -270,7 +318,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | -1102<br>`kCFURLErrorNoPermissionsToReadFile`<br>`NSURLErrorNoPermissionsToReadFile` | <q>The file operation failed because it does not have permission to read the file.</q> |
 | -1103<br>`kCFURLErrorDataLengthExceedsMaximum`<br>`NSURLErrorDataLengthExceedsMaximum` | <q>The file operation failed because the file is too large.</q> |
 
-### SSL Errors
+### SSL 错误
 
 | Code | Description |
 |------|-------------|
@@ -282,7 +330,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | -1205<br>`kCFURLErrorClientCertificateRejected`<br>`NSURLErrorClientCertificateRejected` | <q>The secure connection failed because the client’s certificate was rejected.</q> |
 | -1206<br>`kCFURLErrorClientCertificateRequired`<br>`NSURLErrorClientCertificateRequired` | <q>The secure connection failed because the server requires a client certificate.</q> |
 
-### Download and File I/O Errors
+### 下载及文件 I/O 错误
 
 | Code | Description |
 |------|-------------|
@@ -296,13 +344,13 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | -3006<br>`kCFURLErrorDownloadDecodingFailedMidStream`<br>`NSURLErrorDownloadDecodingFailedMidStream` | <q>The download failed because decoding of the downloaded data failed mid-stream.</q> |
 | -3007<br>`kCFURLErrorDownloadDecodingFailedToComplete`<br>`NSURLErrorDownloadDecodingFailedToComplete` | <q>The download failed because decoding of the downloaded data failed to complete.</q> |
 
-### Cookie errors
+### Cookie 错误
 
 | Code | Description |
 |------|-------------|
 | -4000<br>`kCFHTTPCookieCannotParseCookieFile` | <q>The cookie file cannot be parsed.</q> |
 
-### CFNetServices Errors
+### CFNetServices 错误
 
 | Code | Description |
 |------|-------------|
@@ -320,7 +368,11 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 Having scrolled down through that huge table, you might be expecting the usual NSHipster philosophical wrap-up. Not this week. Do you have any idea how long it took to compile that table? It's all, like, `NSRepetitiveStrainInjury` up in here.
 
+把这个巨大的表格从头滚到尾，你可能期望通常的 NSHipster 哲学，收起来。这周不要。你知道编纂这个表格花了多长时间吗？就这样吧，`NSRepetitiveStrainInjury` 立在这里。
+
 Such are the error of my ways.
+
+这是我处理错误的方式。
 
 <style type="text/css">
 h3 + table { border-top: 1px solid #b7b7b7; }
