Moving comment in snippet to a more appropriate place

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -134,9 +134,8 @@ To pass an error to an `NSError **` parameter, do the following:
 - (BOOL)validateObject:(id)object
                  error:(NSError * __autoreleasing *)outError
 {
-    // call another API, passing &error into its (NSError **) parameter
     NSError *error = nil;
-    BOOL success = ...; 
+    BOOL success = ...; // call another API, passing &error into its (NSError **) parameter
 
     if (!success) {
         if (outError) {
