--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -41,7 +41,7 @@ There's also a whole part about controlling whether objects are automatically ev
 
 Despite all of this, developers should be using `NSCache` a lot more than they currently are. Anything in your project that you call a "cache", but isn't `NSCache` would be prime candidates for replacement. But if you do, just be sure to stick to the classics: `objectForKey:`, `setObject:forKey:` & `removeObjectForKey:`.
 
-Still not convinved? As a parting gift, we'll even make it easier, via a little subscripting majick:
+Still not convinced? As a parting gift, we'll even make it easier, via a little subscripting majick:
 
 ```swift
 extension NSCache {
