Update broken link to OCLint's XCTool page

--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -74,7 +74,7 @@ script: xctool -workspace MyApp.xcworkspace -scheme MyApp test
 
 [OCLint](http://oclint.org) is a static code analyzer that inspects Objective-C (as well as C and C++) code for common sources of problems, like empty `if`/`else`/`try`/`catch`/`finally` statements,unused local variables and parameters, complicated code with high NCSS or cyclomatic / NPath complexity, redundant code, code smells, and other bad practices.
 
-Remember `xctool`'s `json-compilation-database` reporter option? Well, that output [can be read directly](http://docs.oclint.org/en/dev/guide/xctool.html) by OCLint to do its magical static analysis.
+Remember `xctool`'s `json-compilation-database` reporter option? Well, that output [can be read directly](http://docs.oclint.org/en/stable/guide/xctool.html) by OCLint to do its magical static analysis.
 
 At the time of writing, there is still a ways to go before this becomes widely adopted, but my hope is that, now that the cat is out of the bag, some enterprising individuals might work together to make an insanely great experience around this promising tool.
 
