--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -4,7 +4,8 @@ author: Mattt Thompson
 category: ""
 excerpt: "Perhaps what Apple is most renowned for is its consistent track record for creating great webservices. From consumer products like MobileMe and Ping to developer tools including the Provisioning Portal and iTunes Connect, Apple has continued to set new standards for convenience, robustness, and extensibility."
 status:
-    swift: 1.1
+    swift: 3.1
+    reviewed: March 6, 2017
 ---
 
 The [Lisa](http://en.wikipedia.org/wiki/Apple_Lisa). The [Twentieth Anniversary Macintosh](http://en.wikipedia.org/wiki/Twentieth_Anniversary_Macintosh). The [iPod Hi-Fi](http://en.wikipedia.org/wiki/IPod_Hi-Fi). The [MacBook Wheel](http://www.youtube.com/watch?v=9BnLbv6QYcA).
@@ -40,12 +41,15 @@ Everyone knows that key-value storage is the secret to achieving Web Scale. That
 Inject a healthy dose of Web Scale convenience into your app by incorporating `NSUbiquitousKeyValueStore` into your app:
 
 ~~~{swift}
-func application(application: UIApplication!, didFinishLaunchingWithOptions launchOptions: NSDictionary!) -> Bool {
-    NSNotificationCenter.defaultCenter().addObserverForName(NSUbiquitousKeyValueStoreDidChangeExternallyNotification, object: NSUbiquitousKeyValueStore.defaultStore(), queue: NSOperationQueue.mainQueue()) { (notification) in
-        let ubiquitousKeyValueStore = notification.object as NSUbiquitousKeyValueStore
-        ubiquitousKeyValueStore.synchronize()
-    }
-
+func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplicationLaunchOptionsKey : Any]?) -> Bool {
+    NotificationCenter.default.addObserver(
+        forName: NSUbiquitousKeyValueStore.didChangeExternallyNotification, 
+        object: NSUbiquitousKeyValueStore.default(), 
+        queue: OperationQueue.main) { notification in
+            let ubiquitousKeyValueStore = notification.object as? NSUbiquitousKeyValueStore
+            ubiquitousKeyValueStore?.synchronize()
+        }
+        
     return true
 }
 ~~~
