--- a/2014-12-08-apple-pay.md
+++ b/2014-12-08-apple-pay.md
@@ -4,7 +4,8 @@ author: Jack Flintermann
 category: ""
 excerpt: "There's a unique brand of modern angst that manifests the moment you decide to buy something online. While there's no English word for it, it translates roughly to \"Where is my credit card? What is its number? How badly do I actually want this thing, anyway?\""
 status:
-    swift: 1.0
+    swift: 3.1
+    reviewed: March 6, 2017
 ---
 
 There's a unique brand of modern angst that manifests the moment you decide to buy something online. While there's no English word for it, it translates roughly to "Where is my credit card? What is its number? How badly do I actually want this thing, anyway?".
@@ -34,8 +35,8 @@ You'll have to register an Apple Merchant ID before testing anything out. Before
 Once you're up and running with a merchant account, getting started with Apple Pay is really straightforward. When it's time to check out, you'll first need to see if Apple Pay is supported on the device you're running and your customer has added any cards to Passbook:
 
 ```swift
-let paymentNetworks = [PKPaymentNetworkAmex, PKPaymentNetworkMasterCard, PKPaymentNetworkVisa]
-if PKPaymentAuthorizationViewController.canMakePaymentsUsingNetworks(paymentNetworks) {
+let paymentNetworks: [PKPaymentNetwork] = [.amex, .masterCard, .visa]
+if PKPaymentAuthorizationViewController.canMakePayments(usingNetworks: paymentNetworks) {
     // Pay is available!
 } else {
     // Show your own credit card form.
@@ -46,11 +47,11 @@ Assuming Apple Pay is available, the next step is to assemble a `PKPaymentReques
 
 ```swift
 let request = PKPaymentRequest()
-request.supportedNetworks = [PKPaymentNetworkAmex, PKPaymentNetworkMasterCard, PKPaymentNetworkVisa]
+request.supportedNetworks = [.amex, .masterCard, .visa]
 request.countryCode = "US"
 request.currencyCode = "USD"
-request.merchantIdentifier = "<#Replace me with your Apple Merchant ID#>"
-request.merchantCapabilities = .Capability3DS
+request.merchantIdentifier = "12345"
+request.merchantCapabilities = .capability3DS
 ```
 
 Next, describe the things the customer is actually buying with the `paymentSummaryItems` property. This takes an array of `PKPaymentSummaryItem`s, which have a `label` and `amount`. They're analogous to line items on a receipt (which we'll see momentarily).
@@ -61,8 +62,8 @@ Next, describe the things the customer is actually buying with the `paymentSumma
 let wax = PKPaymentSummaryItem(label: "Mustache Wax", amount: NSDecimalNumber(string: "10.00"))
 let discount = PKPaymentSummaryItem(label: "Discount", amount: NSDecimalNumber(string: "-1.00"))
 
-let totalAmount = wax.amount.decimalNumberByAdding(discount.amount)
-                            .decimalNumberByAdding(shipping.amount)
+let totalAmount = wax.amount.adding(discount.amount)
+                            .adding(shipping.amount)
 let total = PKPaymentSummaryItem(label: "NSHipster", amount: totalAmount)
 
 request.paymentSummaryItems = [wax, discount, shipping, total]
@@ -75,7 +76,7 @@ Next, to display the actual payment sheet to the customer, we create an instance
 ```swift
 let viewController = PKPaymentAuthorizationViewController(paymentRequest: request)
 viewController.delegate = self
-presentViewController(viewController, animated: true, completion: nil)
+present(viewController, animated: true)
 ```
 
 A few style nits to be aware of:
@@ -87,17 +88,17 @@ A few style nits to be aware of:
 
 ## PKPaymentAuthorizationViewControllerDelegate
 
-In order to actually handle the payment information returned by the `PKPaymentAuthorizationViewController`, you need to implement the `PKPaymentAuthorizationViewControllerDelegate` protocol. This has 2 required methods, `-(void)paymentAuthorizationViewController:didAuthorizePayment:completion:` and `-(void)paymentAuthorizationViewControllerDidFinish:`.
+In order to actually handle the payment information returned by the `PKPaymentAuthorizationViewController`, you need to implement the `PKPaymentAuthorizationViewControllerDelegate` protocol. This has 2 required methods, `paymentAuthorizationViewController(_:didAuthorizePayment:completion:)` and `paymentAuthorizationViewControllerDidFinish(_:)`.
 
 To understand how each of these components work, let's check out a timeline of how an Apple Pay purchase works:
 
 - You present a `PKPaymentAuthorizationViewController` as described above.
 - The customer approves the purchase using Touch ID (or, if that fails 3 times, by entering their passcode).
 - The thumbprint icon turns into a spinner, with the label "Processing"
-- Your delegate receives the `paymentAuthorizationViewController:didAuthorizePayment:completion:` callback.
-- Your application communicates asynchronously with your payment processor and website backend to actually make a charge with those payment details. Once this complete, you invoke the `completion` handler that you're given as a parameter with either `PKPaymentAuthorizationStatus.Success` or `PKPaymentAuthorizationStatus.Failure` depending on the result.
+- Your delegate receives the `paymentAuthorizationViewController(_:didAuthorizePayment:completion:)` callback.
+- Your application communicates asynchronously with your payment processor and website backend to actually make a charge with those payment details. Once this complete, you invoke the `completion` handler that you're given as a parameter with either `PKPaymentAuthorizationStatus.success` or `PKPaymentAuthorizationStatus.failure` depending on the result.
 - The `PKPaymentAuthorizationViewController` spinner animates into a success or failure icon. If successful, a notification will arrive from PassBook indicating a charge on the customer's credit card.
-- Your delegate receives the `paymentAuthorizationViewControllerDidFinish:` callback. It is then responsible for calling `dismissViewControllerAnimated:completion` to dismiss the payment screen.
+- Your delegate receives the `paymentAuthorizationViewControllerDidFinish(_:)` callback. It is then responsible for calling `dismiss(animated:completion:)` to dismiss the payment screen.
 
 ![Status Indicator]({{ site.asseturl }}/apple-pay-indicators.png)
 
@@ -106,21 +107,22 @@ Concretely, this comes out looking like this:
 ```swift
 // MARK: - PKPaymentAuthorizationViewControllerDelegate
 
-func paymentAuthorizationViewController(controller: PKPaymentAuthorizationViewController!, didAuthorizePayment payment: PKPayment!, completion: ((PKPaymentAuthorizationStatus) -> Void)!) {
+func paymentAuthorizationViewController(_ controller: PKPaymentAuthorizationViewController, didAuthorizePayment payment: PKPayment, completion: @escaping (PKPaymentAuthorizationStatus) -> Void) {
     // Use your payment processor's SDK to finish charging your customer.
-    // When this is done, call completion(PKPaymentAuthorizationStatus.Success)
+    // When this is done, call:
+    completion(.success)
 }
 
-func paymentAuthorizationViewControllerDidFinish(controller: PKPaymentAuthorizationViewController!) {
-    dismissViewControllerAnimated(true, completion: nil)
+func paymentAuthorizationViewControllerDidFinish(_ controller: PKPaymentAuthorizationViewController) {
+    dimiss(animated: true)
 }
 ```
 
-Here, the `processPayment:payment completion:` method is your own code, and would leverage your payment processor's SDK to finish the charge.
+Here, the `process(payment:completion:)` method is your own code, and would leverage your payment processor's SDK to finish the charge.
 
 ## Dynamic Shipping Methods and Pricing
 
-If you're using Apple Pay to let your customer buy physical goods, you might want to offer them different shipping options. You can do this by setting the `shippingMethods` property on `PKPaymentRequest`. Then, you can respond to your customer's selection by implementing the optional `PKPaymentAuthorizationViewControllerDelegate` method, `paymentAuthorizationViewController:didSelectShippingMethod:completion:`. This method follows a similar pattern to the `didAuthorizePayment` method described above, where you're allowed to do asynchronous work and then call a callback with an updated array of `PKPaymentSummaryItem`s that includes the customer's desired shipping method. (Remember from earlier that `PKShippingMethod` inherits from `PKPaymentSummaryItem`? This is really helpful here!)
+If you're using Apple Pay to let your customer buy physical goods, you might want to offer them different shipping options. You can do this by setting the `shippingMethods` property on `PKPaymentRequest`. Then, you can respond to your customer's selection by implementing the optional `PKPaymentAuthorizationViewControllerDelegate` method, `paymentAuthorizationViewController(_:didSelect:completion:)`. This method follows a similar pattern to the `didAuthorizePayment` method described above, where you're allowed to do asynchronous work and then call a callback with an updated array of `PKPaymentSummaryItem`s that includes the customer's desired shipping method. (Remember from earlier that `PKShippingMethod` inherits from `PKPaymentSummaryItem`? This is really helpful here!)
 
 Here's a modified version of our earlier example, implemented as a computed property on the view controller and helper function:
 
@@ -131,32 +133,32 @@ var paymentRequest: PKPaymentRequest {
     let freeShipping = PKShippingMethod(label: "Free Shipping", amount: NSDecimalNumber(string: "0"))
     freeShipping.identifier = "freeshipping"
     freeShipping.detail = "Arrives in 6-8 weeks"
-
+    
     let expressShipping = PKShippingMethod(label: "Express Shipping", amount: NSDecimalNumber(string: "10.00"))
     expressShipping.identifier = "expressshipping"
     expressShipping.detail = "Arrives in 2-3 days"
-
+    
     request.shippingMethods = [freeShipping, expressShipping]
-    request.paymentSummaryItems = paymentSummaryItemsForShippingMethod(freeShipping)
-
+    request.paymentSummaryItems = paymentSummaryItems(forShippingMethod: freeShipping)
+    
     return request
 }
-
-func paymentSummaryItemsForShippingMethod(shipping: PKShippingMethod) -> ([PKPaymentSummaryItem]) {
+  
+func paymentSummaryItems(forShippingMethod shipping: PKShippingMethod) -> ([PKPaymentSummaryItem]) {
     let wax = PKPaymentSummaryItem(label: "Mustache Wax", amount: NSDecimalNumber(string: "10.00"))
     let discount = PKPaymentSummaryItem(label: "Discount", amount: NSDecimalNumber(string: "-1.00"))
-
-    let totalAmount = wax.amount.decimalNumberByAdding(discount.amount)
-                                .decimalNumberByAdding(shipping.amount)
+    
+    let totalAmount = wax.amount.adding(discount.amount)
+                                .adding(shipping.amount)
     let total = PKPaymentSummaryItem(label: "NSHipster", amount: totalAmount)
-
+    
     return [wax, discount, shipping, total]
 }
-
-// MARK: - PKPaymentAuthorizationViewControllerDelegate
-
-func paymentAuthorizationViewController(controller: PKPaymentAuthorizationViewController!, didSelectShippingMethod shippingMethod: PKShippingMethod!, completion: ((PKPaymentAuthorizationStatus, [AnyObject]!) -> Void)!) {
-    completion(PKPaymentAuthorizationStatus.Success, paymentSummaryItemsForShippingMethod(shippingMethod))
+  
+  // MARK: - PKPaymentAuthorizationViewControllerDelegate
+  
+func paymentAuthorizationViewController(_ controller: PKPaymentAuthorizationViewController, didSelect shippingMethod: PKShippingMethod, completion: @escaping (PKPaymentAuthorizationStatus, [PKPaymentSummaryItem]) -> Void) {
+    completion(.success, paymentSummaryItems(forShippingMethod: shippingMethod))
 }
 ```
 
@@ -164,18 +166,18 @@ In this example, the customer will get the option to choose either free or expre
 
 _But wait, there's more!_
 
-Instead of having to provide a bunch of flat-rate shipping options, you can let your customer choose their shipping address and then calculate shipping rates dynamically based on that. To do that, you'll first need to set the `requiredShippingAddressFields` property on your `PKPaymentRequest`. This can represent any combination of `PKAddressField.Email` , .`PhoneNumber`, and .`PostalAddress`.
+Instead of having to provide a bunch of flat-rate shipping options, you can let your customer choose their shipping address and then calculate shipping rates dynamically based on that. To do that, you'll first need to set the `requiredShippingAddressFields` property on your `PKPaymentRequest`. This can represent any combination of `PKAddressField.email` , `.phoneNumber`, and `.postalAddress`.
 
 > Alternatively, if you don't need the user's full mailing address but need to collect some contact information (like an email address to send receipts to), this is a good way to do it.
 
-When this field is set, a new "Shipping Address" row appears in the payment UI that allows the customer to choose one of their saved addresses. Every time they choose one, the (aptly named) `paymentAuthorizationViewController:didSelectShippingAddress:completion:` message will be sent to your `PKPaymentAuthorizationViewControllerDelegate`.
+When this field is set, a new "Shipping Address" row appears in the payment UI that allows the customer to choose one of their saved addresses. Every time they choose one, the (aptly named) `paymentAuthorizationViewController(_:didSelectShippingAddress:completion:)` message will be sent to your `PKPaymentAuthorizationViewControllerDelegate`.
 
 Here, you should calculate the shipping rates for the selected address and then call the `completion` callback with 3 arguments:
 
 1. The result of the call
-    - `PKPaymentAuthorizationStatus.Success` if successful
-    - ``PKPaymentAuthorizationStatus.`Failure` if a connection error occurs
-    - `.InvalidShippingPostalAddress` if the API returns an empty array (i.e. shipping to that address is impossible).
+    - `.success` if successful
+    - `.failure` if a connection error occurs
+    - `.invalidShippingPostalAddress` if the API returns an empty array (i.e. shipping to that address is impossible).
 2. An array of `PKShippingMethod`s representing the customer's available shipping options
 3. A new array of `PKPaymentSummaryItem`s that contains one of the shipping methods
 
@@ -188,72 +190,62 @@ import AddressBook
 import PassKit
 import Alamofire
 
-func addressesForRecord(record: ABRecord) -> [[String: String]] {
-    var addresses: [[String: String]] = []
-    let values: ABMultiValue = ABRecordCopyValue(record, kABPersonAddressProperty).takeRetainedValue()
-    for index in 0..<ABMultiValueGetCount(values) {
-        if let address = ABMultiValueCopyValueAtIndex(values, index).takeRetainedValue() as? [String: String] {
-            addresses.append(address)
-        }
-    }
-
-    return addresses
-}
-
-func fetchShippingMethodsForAddress(address: [String: String], completion: ([PKShippingMethod]?) -> Void) {
+func fetchShippingMethods(forAddress address: CNPostalAddress, completion: @escaping ([PKShippingMethod]?) -> Void) {
     let parameters = [
-        "street": address[kABPersonAddressStreetKey] ?? "",
-        "city": address[kABPersonAddressCityKey] ?? "",
-        "state": address[kABPersonAddressStateKey] ?? "",
-        "zip": address[kABPersonAddressZIPKey] ?? "",
-        "country": address[kABPersonAddressCountryKey] ?? ""
+        "street": address.street,
+        "city": address.city,
+        "state": address.state,
+        "zip": address.postalCode,
+        "country": address.country
     ]
-
-    Alamofire.request(.GET, "http://example.com", parameters: parameters)
-             .responseJSON { (_, _, JSON, _) in
-                if let rates = JSON as? [[String: String]] {
-                    let shippingMethods = map(rates) { (rate) -> PKShippingMethod in
-                        let identifier = rate["id"]
-                        let carrier = rate["carrier"] ?? "Unknown Carrier"
-                        let service = rate["service"] ?? "Unknown Service"
-                        let amount = NSDecimalNumber(string: rate["amount"])
-                        let arrival = rate["formatted_arrival_date"] ?? "Unknown Arrival"
-
-                        let shippingMethod = PKShippingMethod(label: "\(carrier) \(service)", amount: amount)
-                        shippingMethod.identifier = identifier
-                        shippingMethod.detail = arrival
-
-                        return shippingMethod
-                    }
-                }
-             }
+    
+    Alamofire
+        .request(.get, "http://example.com", parameters: parameters)
+        .responseJSON { (_, _, JSON, _) in
+            let rates = JSON as? [[String: String]]
+            completion(rates?.map { (rate) -> PKShippingMethod in
+                let identifier = rate["id"]
+                let carrier = rate["carrier"] ?? "Unknown Carrier"
+                let service = rate["service"] ?? "Unknown Service"
+                let amount = NSDecimalNumber(string: rate["amount"] ?? "0")
+                let arrival = rate["formatted_arrival_date"] ?? "Unknown Arrival"
+                
+                let shippingMethod = PKShippingMethod(label: "\(carrier) \(service)", amount: amount)
+                shippingMethod.identifier = identifier
+                shippingMethod.detail = arrival
+                
+                return shippingMethod
+            })
+        }
 }
 ```
 
 With this, it's simple to implement `PKPaymentAuthorizationViewControllerDelegate`:
 
 ```swift
-func paymentAuthorizationViewController(controller: PKPaymentAuthorizationViewController!, didSelectShippingAddress record: ABRecord!, completion: ((PKPaymentAuthorizationStatus, [AnyObject]!, [AnyObject]!) -> Void)!) {
-    if let address = addressesForRecord(record).first {
-        fetchShippingMethodsForAddress(address) { (shippingMethods) in
-            switch shippingMethods?.count {
-            case .None:
-                completion(PKPaymentAuthorizationStatus.Failure, nil, nil)
-            case .Some(0):
-                completion(PKPaymentAuthorizationStatus.InvalidShippingPostalAddress, nil, nil)
-            default:
-                completion(PKPaymentAuthorizationStatus.Success, shippingMethods, self.paymentSummaryItemsForShippingMethod(shippingMethods!.first!))
-            }
+func paymentAuthorizationViewController(_ controller: PKPaymentAuthorizationViewController, didSelectShippingContact contact: PKContact, completion: @escaping (PKPaymentAuthorizationStatus, [PKShippingMethod], [PKPaymentSummaryItem]) -> Void) {
+    guard let address = contact.postalAddress else {
+        completion(.failure, [], [])
+    }
+
+    fetchShippingMethods(forAddress: address) { (shippingMethods) in
+        guard let shippingMethods = shippingMethods else {
+            completion(.failure, [], [])
+            return
         }
-    } else {
-        completion(PKPaymentAuthorizationStatus.Failure, nil, nil)
+        
+        if shippingMethods.isEmpty {
+            completion(.invalidShippingPostalAddress, [], [])
+        } else {
+            completion(.success, shippingMethods, self.paymentSummaryItems(forShippingMethod: shippingMethods.first!))
+        }
     }
 }
 ```
 
 ![Select a Shipping Method]({{ site.asseturl }}/apple-pay-select-shipping-method.png)
 
-Now, the customer can select an address and receive a different set of shipping options depending on where they live. Both the `shippingAddress` and `shippingMethod` they ultimately select will be available as properties on the `PKPayment` that is given to your delegate in the `paymentAuthorizationViewController:didAuthorizePayment:completion:` method.
+Now, the customer can select an address and receive a different set of shipping options depending on where they live. Both the `shippingAddress` and `shippingMethod` they ultimately select will be available as properties on the `PKPayment` that is given to your delegate in the `paymentAuthorizationViewController(_:didAuthorizePayment:completion:)` method.
 
 > You can find all of the source code in this article at https://github.com/jflinter/ApplePayExample.
 
