Add note about Swift 3 generics - resolves #485.

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -59,3 +59,5 @@ extension NSCache {
     }
 }
 ```
+
+> **Note:** Due to changes in Objective-C generics in Swift 3, the subscript given above will only work in Swift 2.3 and earlier.
